# sim

./: .gitignore  pyproject.toml  test.ipynb
01_MLnote/: 02_matplotlib.ipynb  09_PCA.ipynb  10_factor_analysis.ipynb  11_TimeSeries_decompose.ipynb  12_FastApi.ipynb  파이썬_데이터분석-07_(2).ipynb
01_MLnote/12_FastApi/: app.py  books.db  dataclass.py  db_conn.py
02_DLnote/: 02_NN.ipynb  04_AutoEcoder.ipynb  05_VAE.py  06_RNN.ipynb  07_LSTM.ipynb  08_seq2seq.ipynb  09_LSTM.ipynb  09_example_LSTM_seq2seq.ipynb  10_seq2seq_tf.ipynb  11_seq2seq_At.ipynb  12_seq2seq_At _tf.ipynb  12_seq2seq_tf_At.ipynb  model_save.ipynb  notebook.ipynb
03_Project_IoT_Attack/: EDA_01.ipynb  EDA_02.ipynb  README.md  config.py  modelFunc.py
03_Project_IoT_Attack/model/: layerAE.py
03_Project_IoT_Attack/utils/: databalancing.py
DLnote/: 01_tensor.ipynb  02_mnist.ipynb
MCP/: MCPserver.py  __init__.py
MLnote/: 00_python.ipynb  01_numpy.ipynb  03_Linear.ipynb  04_ logistic_SVM.ipynb  05_DCT.ipynb  06_learning_curve.ipynb  07_naive_byes.ipynb  08_clustering.ipynb  파이썬_데이터분석-06_EDA_시각화.ipynb
Orange/: .CIC.ows.swp.p  CIC.ows  test.ows
Project_IoT_Attack/: 01_test.py  02_test.ipynb  EDA_01.ipynb  README.md  config.py  dataFactory.py  dataFactory_v2.py  dataProvider.py  dataprovider.py  dataprovider_v2.py  main.py  modelFunc.py  modelFunc_v2.py  model_summary.txt
Project_IoT_Attack/bak/: dataFactory_v1.py  dataProvider_v1.py  modelFunc_v1.py  modelFunc_v2.py  modelFunc_v3.py
Project_IoT_Attack/model/: models.py
Pyshark/: dataFactory.py  packet_colname.csv
UI/: pyG_01.py
교안/: 0. Index.md
교안/03_01_02_연습문제_정리/보안데이터분석/: (보안데이터분석) 연습문제_01.md  (보안데이터분석) 연습문제_02.md  (보안데이터분석) 연습문제_03.md  (보안데이터분석) 연습문제_04.md  (보안데이터분석) 연습문제_05.md  (보안데이터분석) 연습문제_06.md  (보안데이터분석) 연습문제_07.md  (보안데이터분석) 연습문제_08.md  (보안데이터분석) 연습문제_09.md  (보안데이터분석) 연습문제_10.md  (보안데이터분석) 연습문제_11.md  (보안데이터분석) 연습문제_12.md  (보안데이터분석) 연습문제_bak.md
교안/03_01_02_연습문제_정리/인공지능과빅데이터/: (인공지능과빅데이터) 연습문제_01.md  (인공지능과빅데이터) 연습문제_02.md  (인공지능과빅데이터) 연습문제_03.md  (인공지능과빅데이터) 연습문제_03_bak.md  (인공지능과빅데이터) 연습문제_04.md  (인공지능과빅데이터) 연습문제_05.md  (인공지능과빅데이터) 연습문제_06.md  (인공지능과빅데이터) 연습문제_07.md  (인공지능과빅데이터) 연습문제_08.md  (인공지능과빅데이터) 연습문제_09.md  (인공지능과빅데이터) 연습문제_10.md  (인공지능과빅데이터) 연습문제_11.md  (인공지능과빅데이터) 연습문제_12.md
교안/05_02_Image/KEC/: Kim Eui Cheol.md
교안/05_02_Image/python/: Mainboard.md
교안/1부 데이터 분석과 머신러닝 프로젝트/1. 데이터 분석과 머신러닝 프로젝트 기초/1.1. 머신러닝 데이터 분석 기술의 배경/: 1.1.1. 머신러닝 데이터 분석 기술의 배경.md  1.1.2. 데이터의 관리와 정보화.md  1.1.3. 데이터와 분석계획, 분석모델.md
교안/1부 데이터 분석과 머신러닝 프로젝트/1. 데이터 분석과 머신러닝 프로젝트 기초/1.3. 데이터 분석 및 머신러닝 프로젝트 기본 도구/: 1.3. 데이터 분석 및 머신러닝 프로젝트 기본 도구.md
교안/1부 데이터 분석과 머신러닝 프로젝트/2. 분석 기법과 분석 모델/2.1. 기초 확률-통계/: 2.1.1. 샘플링과 척도, 기초 통계량.md  2.1.2. 기초확률분포.md  2.1.3. 선형 회귀분석 모델(Linear Regression Model).md  2.1.4. 군집분석.md  2.1.5. 요인 분석(Factor Analysis).md  Bartlett's-test, KMO-test.md  기타 정리 중.md  회귀모형의 가정.md
교안/1부 데이터 분석과 머신러닝 프로젝트/2. 분석 기법과 분석 모델/2.2. 머신러닝 분석 모델/: 2.2. 머신러닝 분석 모형.md  2.2.1. Logistic-Regression.md  2.2.2. SVM - Support Vector Machine.md  2.2.3. 분류 모델의 성능 검증.md  2.2.4. 의사결정 트리 모델 (Decision Tree Model).md  2.2.5. 나이브 베이지 알고리즘.md  2.2.6. 군집화.md  2.2.7. 차원감소.md  2.2.8.-1 요인분석.md  2.2.8.-2 요인분석.md
교안/1부 데이터 분석과 머신러닝 프로젝트/2. 분석 기법과 분석 모델/2.4. 관련 지식/: 2.4.1. 정보의 계량과 데이터 분포 판별.md  2.4.2. 미분.md  2.4.3. 과적합 - Overfitting.md  2.4.4. 선형모델과 정규화 예.md  2.4.5. Normalization.md  2.4.6. 앙상블 Ensemble.md  2.4.7. Data Balance.md  2.4.8. Likehood.md  Boltzmann Machine.md  Dataset Split.md  K-fold와 Cross Validation.md  The Negative Log-Likelihood Loss.md  정규성 검정.md
교안/1부 데이터 분석과 머신러닝 프로젝트/2. 분석 기법과 분석 모델/2.5. 분석모델 해석 - XAI/: 2.5.1. XAI.md  2.5.2. SHAP.md  2.5.3. GRAD-CAM.md
교안/1부 데이터 분석과 머신러닝 프로젝트/3. 데이터 분석과 머신러닝 프로젝트 서비스/: 3.1. 데이터 분석 프로젝트 서비스 과정.md
교안/1부 데이터 분석과 머신러닝 프로젝트/3. 데이터 분석과 머신러닝 프로젝트 서비스/3.2. 데이터 모델과 관리 - 데이터 파이프라인/: (보안데이터 분석) 4주차 데이터 수집과 관리.md  2주차 데이터 수집 관리.md  2주차 데이터의 이해.md  3.2.1.데이터 파이프 라인.md  3.2.2. DataBase Basic - sqlite3.md  3.2.3. ORM - SQLAlchemy.md  3.2.4. Data Classes(Model) - pydantic, dataclass.md  데이터 수집과 관리.md
교안/1부 데이터 분석과 머신러닝 프로젝트/3. 데이터 분석과 머신러닝 프로젝트 서비스/3.3. 모델 관리와 서비스/: 3.3.1 API 서비스 - FastAPI.md  3.3.2. Client UI - Pyside6, Qt5.md  flet.md  (+2 more)
교안/2부 데이터 분석과 머신러닝 프로젝트 심화 확장/: 4. 데이터 변환과 표현.md  7. 동적상태 분석.md
교안/2부 데이터 분석과 머신러닝 프로젝트 심화 확장/5. 시계열 데이터 분석의 이해/: 5.1. 시계열 데이터 분석의 이해.md  5.2. VAR 분석 과정 1.md  ADF와 Stationary.md  GDP 시계열 예측 01 - 타겟(GDP)과 입력변수.md  SVAR(structural Vector AutoRegressive) 모형.md  VAR 분석절차 3.md  VAR 인과관계 검정 4.md  VAR(Vector AutoRegressive) 모형 1.md  VAR(Vector AutoRegressive) 모형 2.md  VAR(Vector AutoRegressive) 모형.md  statsmodels_01 - AutoRegression.md  내생변수와 외생변수.md  단위근, 공적분.md  산업연관분석(Input-output analysis).md  시계열(TimeSeries).md
교안/2부 데이터 분석과 머신러닝 프로젝트 심화 확장/6. 이상치감지/: (인공지능과빅데이터) 12주차  anomaly_detection.md  6-01. AutoEncoder Anomaly Detection.md  6. 이상 감지.md  Anomaly Detection.md
(+56 files in other folders)
